assets/css/screen.css
/* ... */
.expand>a {
    margin: 0.3em;
    padding: 0.4em;
    text-decoration: none;
    color: black;
    display: block;
}

.wrapper {
    padding-top: 0.5em;
    padding-left: 1em;
    background: rgba(230, 250, 250, 0.85);
    display: none;
}

#wrapper1:target,
#wrapper2:target,
#wrapper3:target,
#wrapper4:target,
#wrapper5:target,
#wrapper6:target,
#wrapper7:target,
#wrapper8:target,
#wrapper9:target,
#wrapper10:target,
#wrapper11:target,
#wrapper12:target,
#wrapper13:target,
#wrapper14:target,
#wrapper15:target,
#wrapper16:target,
#wrapper17:target,
#wrapper18:target {
    display: inherit;
}

#responsive-iframe {
    margin-bottom: 5%;
    min-height: 400px;
    width: 100%
}

.intro {
    display: inline-block;
}

.column {
    width: 33%;
    text-align: center;
    padding-top: 30px;
    float: left;
}

.profile {
    width: 50%;
}

.overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(0, 0, 0, 0.7);
    transition: opacity 500ms;
    visibility: hidden;
    opacity: 0;
}

.overlay:target {
    visibility: visible;
    z-index: 19;
    opacity: 1;
}

.popup {
    margin: 5vh auto;
    height: 90%;
    padding: 20px;
    background: #fff;
    border-radius: 5px;
    width: 70%;
    position: relative;
    z-index: 20;
    transition: all .5s ease-in-out;
}

.popup .close {
    position: absolute;
    top: 20px;
    right: 30px;
    transition: all 200ms;
    font-size: 30px;
    font-weight: bold;
    text-decoration: none;
    color: #333;
    z-index: 20;
}

.unvisible {
    display: none;
}

@media (max-width:1170px) {
    .post-full-image {
        border-radius: 0;
        max-width: 100%;
    }

    .post-full-header {
        max-width: 100%;
    }

    .post-full-image img {
        height: 600px
    }

    .inner {
        width: 100%;
    }

    .expand {
        width: 100%;
    }

    .post-full-content {
        margin: 0 auto;
        max-width: 100%;
    }

    nav>ul {
        max-width: 100%;
    }
}

@media (max-width:800px) {
    .post-full-image img {
        height: 400px
    }
}




/*
Css for side menu
*/

.sidemenu li a {
    text-decoration: none;
    color: #232323;
    transition: color 0.3s ease;
    padding: 8px 60px 8px 30px;
    display: block;
}

.sidemenu li:focus {
    outline: none;
}

.sidemenu li a:hover {
    color: tomato;
    cursor: pointer;
}

.sidemenuToggle {
    display: block;
    position: relative;
    top: 10px;
    left: 5px;
    z-index: 1;
    -webkit-user-select: none;
    user-select: none;
}

.sidemenuToggle input {
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    top: -6px;
    left: 6px;
    margin-left: -10px;
    cursor: pointer;
    opacity: 0;
    /* hide this */
    z-index: 4;
    /* and place it over the hamburger */
    -webkit-touch-callout: none;
}


/*
 * Just a quick hamburger
 */

.sidemenuToggle span {
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    background: #232323;
    border-radius: 4px;
    z-index: 3;
    transform-origin: 37px -12px;
    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
    top: 0px;
}

.sidemenuToggle span:first-child {
    transform-origin: 0% 0%;
}

.sidemenuToggle span:nth-last-child(2) {
    transform-origin: -131px -44px;
}


/* 
 * Transform all the slices of hamburger
 * into a crossmark.
 */

.sidemenuToggle input:checked~span {
    opacity: 1;
    position: fixed;
    margin-top: 100px;
    margin-bottom: 0px;
    transform: rotate(45deg);
    background: #232323;
}


/*
 * But let's hide the middle one.
 */

.sidemenuToggle input:checked~.span2 {
    opacity: 0;
}


/*
 * Ohyeah and the last one should go the other direction
 */

.sidemenuToggle input:checked~.span3 {
    transform: rotate(-45deg) translate(-65px, 75px);
}


/*
 * Make this absolute positioned
 * at the top left of the screen
 */

.sidemenu {
    position: fixed;
    height: 1000vh;
    top: 0px;
    margin: -20px 0 0 -40px;
    padding: 0;
    padding-top: 125px;
    background: #ededed;
    list-style-type: none;
    font-size: 16px;
    line-height: 1.5;
    box-shadow: 0px 0px 100px 0px lightslategrey;
    -webkit-font-smoothing: antialiased;
    /* to stop flickering of text in safari */
    transform-origin: 0% 0%;
    transform: translate(-100%, 0);
    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
}

.sidemenu li {
    font-size: 17px;
    border-bottom: 1px solid rgba(100, 100, 100, .15);
}

.sidemenu li ul {
    background: rgba(0, 0, 0, .05);
    list-style-type: none;
    display: none;
    padding: 0;
}

.sidemenu li ul li {
    border-top: 1px solid rgba(100, 100, 100, .15);
    border-bottom: none;
    font-size: 15px;
}

.sidemenu li ul li a {
    padding: 8px 60px 8px 45px;
}


/*
 * And let's slide it in from the left
 */

.sidemenuToggle input:checked {
    position: fixed;
    margin-top: 67px;
    top: 0px;
    left: 30px;
}

.sidemenuToggle input:checked~ul {
    transform: none;
}

.sidemenuToggle input:checked~span,
.sidemenuToggle input:checked {}




/*
    Css for VP lastmodified
*/
.article-title{
    float: left;
    margin-top: 2.8rem !important;
    margin-bottom: 3rem !important;
    min-width: 70% !important;
    max-width: 75%;
}

.VPlastMofified{
    float: right;
    text-align: right;
    margin: 2.8rem 0 3rem 0 !important;
    min-width: 20% !important;
    max-width: 25%;
}


/*
    Css for top tab menu (TSC Moodle)
*/

.topTabgroup {
    margin-top: -15px;
    display: flex;
    justify-content: flex-end;
    list-style: none;
    margin-right: 140px;
    position: absolute;
    right: 0;
}

.topTabgroup li {
    /* Makes a horizontal row */
    float: left;

    /* So the psueudo elements can be
 abs. positioned inside */
    position: relative;
}
/* ... */

